--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ before install:
 
 script:
     - bash ./First_setup.sh
+    - bash ./Set-Up/Install_modules.sh
+    - bash./Install_Modules/Install_python_2.7.15.sh
