Fixed python 2.7.15 script, added python 3.7.0 script

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ sudo: required
 
 language: bash
 
-services:
-    - docker
+# Ultimately use a docker to test on 18.04
+#services:
+#    - docker
 
-before install:
-    - docker pull ubuntu:18.04
+#before install:
+#    - docker pull ubuntu:18.04
 
 script:
     - bash ./First_setup.sh
