--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ language: bash
 #before install:
 #    - docker pull ubuntu:18.04
 
-script:
+before script:
     - bash ./First_setup.sh
     - bash ./Set-Up/Install_modules.sh
+
+script:
     - bash ./Install_Modules/Install_python_2.7.15.sh
