--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ sudo: required
 language: bash
 
 # Ultimately use a docker to test on 18.04
-#services:
-#    - docker
+services:
+    - docker
 
-#before install:
-#    - docker pull ubuntu:18.04
+before install:
+    - docker pull ubuntu:18.04
 
 install:
     - bash ./First_setup.sh
