--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ before install:
     - docker pull ubuntu:18.04
 
 install:
-    - bash ./Set-Up/First_setup.sh
+    - sudo bash ./Set-Up/First_setup.sh
 #    - bash ./Set-Up/Install_modules.sh
-    - bash ./Set-Up/Install_slurm.sh
+    - sudo bash ./Set-Up/Install_slurm.sh
 
 script:
     - bash ./Install_Modules/Install_python_2.7.15.sh
