Made installation modules for matlab, gcc, protobuf, caffe and caffe 3D. Solved some issues with the python, cuda and cudnn installation scripts.

--- a/Install_Modules/Module_files/CaffeMakefile.config
+++ b/Install_Modules/Module_files/CaffeMakefile.config
@@ -25,7 +25,7 @@ USE_CUDNN := 1
 # CUSTOM_CXX := g++
 
 # CUDA directory contains bin/ and lib/ directories that we need.
-CUDA_DIR := /usr/local/cuda-8.0.61
+CUDA_DIR := /usr/local/cuda-8.0
 # On Ubuntu 14.04, if cuda tools are installed via
 # "sudo apt-get install nvidia-cuda-toolkit" then use this instead:
 # CUDA_DIR := /usr
@@ -61,7 +61,7 @@ BLAS := atlas
 
 # This is required only if you will compile the matlab interface.
 # MATLAB directory should contain the mex binary in /bin.
-MATLAB_DIR := /usr/local/matlab-R2015B
+MATLAB_DIR := /packages/matlab/R2015b
 # MATLAB_DIR := /Applications/MATLAB_R2012b.app
 
 # NOTE: this is required only if you will compile the python interface.
@@ -92,8 +92,8 @@ PYTHON_LIB := /usr/lib
 # WITH_PYTHON_LAYER := 1
 
 # Whatever else you find you need goes here.
-INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include /usr/lib/x86_64-linux-gnu/hdf5/serial
-LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib /usr/lib/x86_64-linux-gnu/hdf5/serial
+INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include /usr/include/hdf5/serial/ /usr/lib/x86_64-linux-gnu/hdf5/serial /packages/cudnn/Cuda-8.0/v5.1/cuda/lib64 /packages/cudnn/Cuda-8.0/v5.1/cuda/include /packages/protobuf/v3.2.0/include
+LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib /usr/lib/x86_64-linux-gnu/hdf5/serial /packages/cudnn/Cuda-8.0/v5.1/cuda/lib64 /packages/cudnn/Cuda-8.0/v5.1/cuda/include /packages/protobuf/v3.2.0/lib
 
 # If Homebrew is installed at a non standard location (for example your home directory) and you use it for general dependencies
 # INCLUDE_DIRS += $(shell brew --prefix)/include
@@ -105,7 +105,7 @@ LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib /usr/lib/x86_64-linux-gnu/
 
 # Uncomment to use `pkg-config` to specify OpenCV library paths.
 # (Usually not necessary -- OpenCV libraries are normally installed in one of the above $LIBRARY_DIRS.)
-# USE_PKG_CONFIG := 1
+USE_PKG_CONFIG := 1
 
 # N.B. both build and distribute dirs are cleared on `make clean`
 BUILD_DIR := build
