New automatic add user config, updated install modules, updated to latest cluster config

--- a/Set-Up/Templates/slurm.conf
+++ b/Set-Up/Templates/slurm.conf
@@ -3,7 +3,7 @@
 # See the slurm.conf man page for more information.
 #
 ControlMachine=bigr-nzxt-7
-ControlAddr=10.130.2.184
+ControlAddr=10.55.2.161
 #
 #MailProg=/bin/mail
 MpiDefault=none
@@ -50,7 +50,8 @@ SlurmctldLogFile=/var/log/slurmctld.log
 SlurmdLogFile=/var/log/slurmd.log
 #
 # COMPUTE NODES
-NodeName=bigr-nzxt-5 NodeAddr=10.130.2.48 State=UNKNOWN Gres=gpu:Quadro:1,gpu:TitanXP:1 CPUs=12 RealMemory=30000
-NodeName=bigr-nzxt-7 NodeAddr=10.130.2.184 State=UNKNOWN Gres=gpu:GTX:2 CPUs=12 RealMemory=30000
+NodeName=bigr-nzxt-7 NodeAddr=10.55.2.161 State=UNKNOWN Gres=gpu:GTX:2 CPUs=12 RealMemory=30000
+NodeName=bigr-nzxt-5 NodeAddr=10.55.2.42 State=UNKNOWN Gres=gpu:Quadro:1,gpu:TitanXP:1 CPUs=12 RealMemory=30000
+NodeName=bigr-nzxt-4 NodeAddr=10.55.2.117 State=UNKNOWN Gres=gpu:TitanV:2 CPUs=12 RealMemory=30000
 # PARTITIONS
-PartitionName=GPU Nodes=bigr-nzxt-5,bigr-nzxt-7 Default=YES MaxTime=INFINITE State=UP
+PartitionName=GPU Nodes=bigr-nzxt-5,bigr-nzxt-7,bigr-nzxt-4 Default=YES MaxTime=INFINITE State=UP
