Adjusted the slurm conf

--- a/Set-Up/Templates/slurm.conf
+++ b/Set-Up/Templates/slurm.conf
@@ -35,6 +35,7 @@ FastSchedule=1
 SchedulerType=sched/backfill
 SelectType=select/cons_res
 SelectTypeParameters=CR_CPU_MEMORY
+EnforcePartLimits=ALL
 #
 #
 Prolog=/etc/slurm-llnl/create_tmp_prolog
@@ -55,4 +56,4 @@ NodeName=bigr-nzxt-5 NodeAddr=10.55.2.42 State=UNKNOWN Gres=gpu:Quadro:1,gpu:Tit
 NodeName=bigr-nzxt-4 NodeAddr=10.55.2.117 State=UNKNOWN Gres=gpu:TitanV:2 CPUs=12 RealMemory=30000
 # PARTITIONS
 PartitionName=GPU Nodes=bigr-nzxt-5,bigr-nzxt-4 Default=YES MaxTime=INFINITE State=UP
-PartitionName=GPU_short Nodes=bigr-nzxt-7,bigr-nzxt-5,bigr-nzxt-4 Default=NO MaxTime=12:00:00 State=UP
+PartitionName=GPU_short Nodes=bigr-nzxt-7,bigr-nzxt-5,bigr-nzxt-4 Default=NO MaxTime=8:00:00 State=UP
