--- a/Set-Up/Templates/slurm.conf
+++ b/Set-Up/Templates/slurm.conf
@@ -36,6 +36,7 @@ SchedulerType=sched/backfill
 SelectType=select/cons_res
 SelectTypeParameters=CR_CPU_MEMORY
 EnforcePartLimits=ALL
+PriorityType=priority/multifactor
 #
 #
 Prolog=/etc/slurm-llnl/create_tmp_prolog
@@ -57,3 +58,4 @@ NodeName=bigr-nzxt-4 NodeAddr=10.55.2.117 State=UNKNOWN Gres=gpu:TitanV:2 CPUs=1
 # PARTITIONS
 PartitionName=GPU Nodes=bigr-nzxt-5,bigr-nzxt-4 Default=YES MaxTime=INFINITE State=UP
 PartitionName=GPU_short Nodes=bigr-nzxt-7,bigr-nzxt-5,bigr-nzxt-4 Default=NO MaxTime=8:00:00 State=UP
+PartitionName=GPU_test Nodes=bigr-nzxt-7,bigr-nzxt-5,bigr-nzxt-4 Default=NO MaxTime=0:20:00 State=UP PriorityTier=3
