Added weights to the different nodes

--- a/Set-Up/Templates/slurm.conf
+++ b/Set-Up/Templates/slurm.conf
@@ -52,9 +52,9 @@ SlurmctldLogFile=/var/log/slurmctld.log
 SlurmdLogFile=/var/log/slurmd.log
 #
 # COMPUTE NODES
-NodeName=bigr-nzxt-7 NodeAddr=10.55.2.161 State=UNKNOWN Gres=gpu:GTX:2 CPUs=12 RealMemory=30000
-NodeName=bigr-nzxt-5 NodeAddr=10.55.2.42 State=UNKNOWN Gres=gpu:Quadro:1,gpu:TitanXP:1 CPUs=12 RealMemory=30000
-NodeName=bigr-nzxt-4 NodeAddr=10.55.2.117 State=UNKNOWN Gres=gpu:TitanV:2 CPUs=12 RealMemory=30000
+NodeName=bigr-nzxt-7 NodeAddr=10.55.2.161 State=UNKNOWN Gres=gpu:GTX:2 CPUs=12 RealMemory=30000 Weight=1
+NodeName=bigr-nzxt-5 NodeAddr=10.55.2.42 State=UNKNOWN Gres=gpu:Quadro:1,gpu:TitanXP:1 CPUs=12 RealMemory=30000 Weight=5
+NodeName=bigr-nzxt-4 NodeAddr=10.55.2.117 State=UNKNOWN Gres=gpu:TitanV:2 CPUs=12 RealMemory=30000 Weight=6
 # PARTITIONS
 PartitionName=GPU Nodes=bigr-nzxt-5,bigr-nzxt-4 Default=YES MaxTime=INFINITE State=UP
 PartitionName=GPU_short Nodes=bigr-nzxt-7,bigr-nzxt-5,bigr-nzxt-4 Default=NO MaxTime=8:00:00 State=UP
